Dirty but responsive multi-line club - alternative to table

--- a/clubs.html
+++ b/clubs.html
@@ -156,6 +156,30 @@
           </table>
         </div>
       </div>
+      <div class="club-row">
+        <h2 class="club-heading" >Omaha Public Library</h2>
+        <h3 class="sub-club">Abrahams Branch</h3>
+
+        <div class="col-xs-12 col-sm-4">
+
+          <img style="width:100%;max-width:70px;" src="img/clubs/library.jpeg">
+          <address>
+            5111 North 90th Street<br>
+            Omaha, NE 68134
+          </address>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <h4>Saturdays, 9am-1pm</h4>
+          <p>6th-12th grade</p>
+          <p><span>Instructors:</span> Eris Koleszar, Wendy Holley</p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <div class="btn" style="float:right;width:40px; height:40px; background:#ece81a;color:white;font-size:20px;font-weight:bold;border-radius:0 0 0 0;">+</div>
+          <h4>Accepting Applications</h4>
+          <p><span>Applications Due:</span> Saturday, August 27</p>
+          <p><span>Session Starts:</span> Saturday, September 17</p>
+        </div>
+      </div>
     </div>
 		<!-- FOOTER -->
 	  <footer class="footer">
