Playing with css for color filtering

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<!--custom stylesheet-->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/photo-grid.css" />
+		<link rel="stylesheet" type="text/css" href="css/colofilter.css" />
+    
 
 		<script src="js/photo-grid.js"></script>
 
