Adds link to resources page in top nav

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								  <ul class="dropdown-menu">
 										<li><a href="about.html">Omaha Girls Who Code</a></li>
 										<li><a href="faq.html">FAQ</a></li>
-										<li><a href="#.html">Resources</a></li>
+										<li><a href="resources.html">Resources</a></li>
 									</ul>
                 </li>
 								<li><a href="calendar.html">Calendar</a></li>
