--- a/clubs.html
+++ b/clubs.html
@@ -107,9 +107,10 @@
       <br>
       <div class="clubs-list">
         <div class="club row">
-          <h2 class="club-heading">Omaha Public Library</h2>
-          <h3 class="sub-club">Abrahams Branch</h3>
-
+          <div class="col-xs-12">
+            <h2 class="club-heading">Omaha Public Library</h2>
+            <h3 class="sub-club">Abrahams Branch</h3>
+          </div>
           <div class="col-xs-12 col-sm-4">
 
             <img class="club-logo" src="img/clubs/library.jpeg">
@@ -132,9 +133,10 @@
         </div>
         
         <div class="club row">
-          <h2 class="club-heading">Do Space</h2>
-          <h3 class="sub-club">Technology Library</h3>
-
+          <div class="col-xs-12">
+            <h2 class="club-heading">Do Space</h2>
+            <h3 class="sub-club">Technology Library</h3>
+          </div>
           <div class="col-xs-12 col-sm-4">
 
             <img class="club-logo" src="img/clubs/dospace-logo.jpg">
@@ -156,9 +158,10 @@
           </div>
         </div>
         <div class="club row">
-          <h2 class="club-heading">AIM</h2>
-          <h3 class="sub-club">Completely Kids</h3>
-
+          <div class="col-xs-12">
+            <h2 class="club-heading">AIM</h2>
+            <h3 class="sub-club">Completely Kids</h3>
+          </div>
           <div class="col-xs-12 col-sm-4">
 
             <img class="club-logo" src="img/clubs/AIM-Logo.png">
