--- a/about.html
+++ b/about.html
@@ -66,29 +66,15 @@
           <div class="about-post">
 
             <hr>
-            <img class="wrap-left" src="img/girls/gwc-4.jpg" />		<p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+            <img class="wrap-left" src="img/girls/gwc-5.jpg" />		<p>Omaha Girls Who Code includes local clubs which are a part of the national organization, Girls Who Code. Our goal is help young women realize and achieve their goals and dreams through developing strong computing skills and team building.  </p>
 
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <h2>Heading</h2>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <pre><code>Example code block</code></pre>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            <ol>
-              <li>Vestibulum id ligula porta felis euismod semper.</li>
-              <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-              <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-            </ol>
-            <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+            <p><a href="https://girlswhocode.com/" target="_blank">Girls Who Code</a> is a national non-profit organization working to close the gender gap in technology. Girls Who Code is leading the movement to inspire, educate, and equip young women with the computing skills to pursue 21st century opportunities by sponsoring 500 after-school clubs for teenage girls all over the country. By the end of 2016, Girls Who Code will have reached 40,000 girls in every US state. </p>
+
+            <p>Girls Who Code's mission is to create gender parity within technology by providing a unique educational experience for young women to learn computer science. Interested particiapnts who self-identify as female are welcome to apply to our programs. This includes students who were not assigned to the female sex at birth but who live and identify as female now. [It also includes students who are legally assigned to the female sex, but who identify as transgender or gender fluid.]</p>
+
+            <h3>Omaha Girls Who Code centers around a fun, collaborative, curriculum designed to teach a wide range of skill sets including graphic art, video game design, artificial intelligence, mobile development, and cryptography.</h3>
+  
+            <p>Participants learn how to use variables, loops, conditionals, and functions while building teamwork and leadership skills that are essential for success.  Through the 40 hour program participants are meeting with technology and community building professionals while completing intensive and creative coding projects as a team.  </p>
           </div>
 
 
