--- a/clubs.html
+++ b/clubs.html
@@ -146,7 +146,7 @@
             </address>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Saturdays, Sundays 3-5pm</h4>
+            <h4>Sundays 3-5pm</h4>
             <p>6th-8th grade</p>
             <p><span>Instructors:</span> Alexandra Millatmal</p>
           </div>
@@ -164,21 +164,21 @@
           </div>
           <div class="col-xs-12 col-sm-4">
 
-            <img class="club-logo" src="img/clubs/AIM-Logo.png">
+            <img class="club-logo" src="img/clubs/completely-kids-logo.jpg">
             <address>
               1905 Harney St<br>
               Omaha, NE 68102
             </address>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Tuesdays, Wednesdays 4-6pm</h4>
+            <h4>Tuesdays, Thursdays 4:30-5:30pm</h4>
             <p>6th-8th grade</p>
-            <p><span>Instructors:</span> Not Announced</p>
+            <p><span>Instructors:</span> Erin Lasiter</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Not Yet Accepting Applications</h4>
+            <h4>Not Accepting Applications</h4>
             <p><span>Applications Due:</span>N/A</p>
-            <p><span>Session Starts:</span>N/A</p>
+            <p><span>Session Starts:</span>Tuesday, October 18th</p>
           </div>
         </div>
         
