Updates AIM/Completely kids info

--- a/clubs.html
+++ b/clubs.html
@@ -172,12 +172,11 @@
           </div>
           <div class="col-xs-12 col-sm-4">
             <h4>Tuesdays, Thursdays 4:30-5:30pm</h4>
-            <p>6th-8th grade</p>
+            <p>6th grade</p>
             <p><span>Instructors:</span> Erin Lasiter</p>
           </div>
           <div class="col-xs-12 col-sm-4">
             <h4>Not Accepting Applications</h4>
-            <p><span>Applications Due:</span>N/A</p>
             <p><span>Session Starts:</span>Tuesday, October 18th</p>
           </div>
         </div>
