I edited the text adding and subtracting sentences as well as added subheading.

--- a/about.html
+++ b/about.html
@@ -66,15 +66,16 @@
           <div class="about-post">
 
             <hr>
-            <img class="wrap-left" src="img/girls/gwc-5.jpg" />		<p>Omaha Girls Who Code includes local clubs which are a part of the national organization, Girls Who Code. Our goal is help young women realize and achieve their goals and dreams through developing strong computing skills and team building.  </p>
+            <img class="wrap-left" src="img/girls/gwc-5.jpg" />		<h2>Omaha Girls Who Code</h2><p>Omaha Girls Who Code includes local clubs which are a part of the national organization, Girls Who Code. Our goal is help young women realize and achieve their goals and dreams through developing strong computing skills and team building.  </p>
 
-            <p><a href="https://girlswhocode.com/" target="_blank">Girls Who Code</a> is a national non-profit organization working to close the gender gap in technology. Girls Who Code is leading the movement to inspire, educate, and equip young women with the computing skills to pursue 21st century opportunities by sponsoring 500 after-school clubs for teenage girls all over the country. By the end of 2016, Girls Who Code will have reached 40,000 girls in every US state. </p>
+            <h2>GWC Nationally</h2><p><a href="https://girlswhocode.com/" target="_blank">Girls Who Code</a> is a national non-profit organization working to close the gender gap in technology. Girls Who Code is leading the movement to inspire, educate, and equip young women with the computing skills to pursue 21st century opportunities by sponsoring 500 after-school clubs for teenage girls all over the country. By the end of 2016, Girls Who Code will have reached 40,000 girls in every US state. </p>
 
-            <p>Girls Who Code's mission is to create gender parity within technology by providing a unique educational experience for young women to learn computer science. Interested particiapnts who self-identify as female are welcome to apply to our programs. This includes students who were not assigned to the female sex at birth but who live and identify as female now. [It also includes students who are legally assigned to the female sex, but who identify as transgender or gender fluid.]</p>
+            <p>Girls Who Code's mission is to create gender parity within technology by providing a unique educational experience for young women to learn computer science. Interested participants who identify as female are welcome to apply to our programs. This includes students who were not assigned female at birth and those who identify as femme, gender fluid, or gender non-conforming.</p>
 
-            <h3>Omaha Girls Who Code centers around a fun, collaborative, curriculum designed to teach a wide range of skill sets including graphic art, video game design, artificial intelligence, mobile development, and cryptography.</h3>
+            <h2>What GWC teaches</h2>
+            <p>Girls Who Code centers around a fun, collaborative, curriculum designed to teach a wide range of skill sets including graphic art, video game design, artificial intelligence, mobile development, and cryptography.</p>
   
-            <p>Participants learn how to use variables, loops, conditionals, and functions while building teamwork and leadership skills that are essential for success.  Through the 40 hour program participants are meeting with technology and community building professionals while completing intensive and creative coding projects as a team.  </p>
+            <p>Participants learn how to use variables, loops, conditionals, and functions while building teamwork and leadership skills that are essential for success.  Through the 40 hour (3 level) program, participants are meeting with technology and community building professionals. Each level completes intensive and creative coding projects as a team about topics they chose themselves.  Once participants complete level 3, they are encouraged to remain engaged, as student embassodors. Want to learn more? <a href="#">Check out our FAQ page.</a></p>
           </div>
 
 
