--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             <h2>What GWC teaches</h2>
             <p>Girls Who Code centers around a fun, collaborative, curriculum designed to teach a wide range of skill sets including graphic art, video game design, artificial intelligence, mobile development, and cryptography.</p>
   
-            <p>Participants learn how to use variables, loops, conditionals, and functions while building teamwork and leadership skills that are essential for success.  Through the 40 hour (3 level) program, participants are meeting with technology and community building professionals. Each level completes intensive and creative coding projects as a team about topics they chose themselves.  Once participants complete level 3, they are encouraged to remain engaged, as student embassodors. Want to learn more? <a href="#">Check out our FAQ page.</a></p>
+            <p>Participants learn how to use variables, loops, conditionals, and functions while building teamwork and leadership skills that are essential for success.  Through the 40 hour (3 level) program, participants are meeting with technology and community building professionals. Each level completes intensive and creative coding projects as a team about topics they chose themselves.  Once participants complete level 3, they are encouraged to remain engaged as student embassodors. Want to learn more? <a href="#">Check out our FAQ page.</a></p>
           </div>
 
 
