update grid on sponsors.html

--- a/sponsors.html
+++ b/sponsors.html
@@ -108,7 +108,7 @@
           </div>
         <div class="col-md-1"></div>
         </div>
-        <!-- Sponsor logos and info, 2 column grid -->
+        <!-- Sponsor logos and info, 3 column grid -->
         <div class="row">
         <div class="col-md-4">
 
@@ -136,6 +136,7 @@
           </div>
           <p><a class="btn btn-default" href="http://interfaceschool.com" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
+        <!--new row - two columns-->
         <div class="row">
         <div class="col-md-6">
           <a href="http://getflywheel.com" target="_blank"><img class="img-circle" src="img/sponsors/flywheel.png" alt="Flywheel"></a>
