add reference to AIM img source in sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -146,7 +146,7 @@
         </div>
         
         <div class="col-md-6">
-          <a href="http://aimforbrilliance.org" target="_blank"><img class="img-circle" src="#" alt="AIM"></a>
+          <a href="http://aimforbrilliance.org" target="_blank"><img class="img-circle" src="img/sponsors/aim-logo.jpg" alt="AIM"></a>
           <h2>AIM Exchange</h2>
           <p>AIM is an innovative not-for-profit community organization that grows, connects and inspires the tech talent ecosystem. AIM 
           provided space and sponsorship for the final Omaha Girls Who Code - Milton R. Abrahams Omaha Library Branch Club project demo event.</p>
