--- a/sponsors.html
+++ b/sponsors.html
@@ -109,7 +109,7 @@
         <div class="col-md-1"></div>
         </div>
         <!-- Sponsor logos and info, 3 column grid -->
-        <div class="row">
+        <div class="row text-center">
         <div class="col-md-4">
 
         
@@ -137,7 +137,7 @@
           <p><a class="btn btn-default" href="http://interfaceschool.com" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
         <!--new row - two columns-->
-        <div class="row">
+        <div class="row text-center">
         <div class="col-md-6">
           <a href="http://getflywheel.com" target="_blank"><img class="img-circle" src="img/sponsors/flywheel.png" alt="Flywheel"></a>
           <h2>Flywheel</h2>
@@ -146,7 +146,7 @@
         </div>
         
         <div class="col-md-6">
-          <a href="http://aimforbrilliance.org" target="_blank"><img class="img-circle" src="img/sponsors/aim-logo.jpg" alt="AIM"></a>
+          <a href="http://aimforbrilliance.org" target="_blank"><img src="img/sponsors/aim-logo.jpg" alt="AIM"></a>
           <h2>AIM Exchange</h2>
           <p>AIM is an innovative not-for-profit community organization that grows, connects and inspires the tech talent ecosystem. AIM 
           provided space and sponsorship for the final Omaha Girls Who Code - Milton R. Abrahams Omaha Library Branch Club project demo event.</p>
