remove circle overlay on all images

--- a/sponsors.html
+++ b/sponsors.html
@@ -113,7 +113,7 @@
         <div class="col-md-4">
 
         
-					<a href="http://godynamo.co/" target="_blank"><img class="img-circle" src="img/sponsors/dynamo.jpg" alt="Dynamo" width="140" height="140"></a>
+					<a href="http://godynamo.co/" target="_blank"><img src="img/sponsors/dynamo.jpg" alt="Dynamo" width="140" height="140"></a>
 				  <h2>Dynamo</h2>
 				  <p>Dynamo is an Omaha based IT consulting and recruiting firm. Dynamo generously delivered healthy and hearty snacks for young coders for the first ever Omaha Girls Who Code cohort.</p>
 				  <p><a class="btn btn-default" href="http://godynamo.com" role="button" target="_blank">Visit Website &raquo;</a></p>
@@ -121,7 +121,7 @@
         
 
         <div class="col-md-4">
-          <a href="http://omahalibrary.org" target="_blank"><img class="img-circle" src="img/sponsors/library.jpeg" alt="Omaha Public Library"></a>
+          <a href="http://omahalibrary.org" target="_blank"><img src="img/sponsors/library.jpeg" alt="Omaha Public Library"></a>
           <h2>Omaha Public Library</h2>
           <div class="comment more">
             <p>Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
@@ -139,7 +139,7 @@
         <!--new row - two columns-->
         <div class="row text-center">
         <div class="col-md-6">
-          <a href="http://getflywheel.com" target="_blank"><img class="img-circle" src="img/sponsors/flywheel.png" alt="Flywheel"></a>
+          <a href="http://getflywheel.com" target="_blank"><img src="img/sponsors/flywheel.png" alt="Flywheel"></a>
           <h2>Flywheel</h2>
           <p>Flywheel is a WordPress hosting company based in Omaha Nebraska. The Flywheel team provided Scout Books for girls.</p>
           <p><a class="btn btn-default" href="http://getflywheel.com" target="_blank" role="button">Visit Website &raquo;</a></p>
