--- a/resources.html
+++ b/resources.html
@@ -97,12 +97,11 @@
           <p>Technology library with public access to printers, 3-D printers, and courses throughout the year</p>
           <p><a class="btn btn-default" href="http://www.dospace.org/" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
-        
         <div class="col-sm-4 resource">
-          <img class="img-resource" src="img/resources/AIM-Logo.png" alt="Silicon Prairie GenCyber Camp">
-          <h3>The Silicon Prairie GenCyber Camp at AIM</h3>
-          <p>For high school students entering 9th & 10th grade & codeCraft Explorers and Masters courses offered throughout the year for students ages 7-17</p>
-          <p><a class="btn btn-default" href="http://aimforbrilliance.org/" target="_blank" role="button">Visit Website &raquo;</a></p>
+          <img class="img-resource" src="img/resources/AIM-logo.jpg" alt="Silicon Prairie GenCyber Camp">
+          <h3>Brain Exchange</h3>
+          <p>AIM Brain Exchange is open to youth ages 7-17. With real life scenario-based learning and teams based on skill level and not age</p>
+          <p><a class="btn btn-default" href="http://careerlink.com/brainexchange/" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
 
       </div><!-- /.row -->
