Updates clubs page for DoSpace info

--- a/clubs.html
+++ b/clubs.html
@@ -151,10 +151,9 @@
             <p><span>Instructors:</span> Alexandra Millatmal</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <a type="button" class="btn btn-apply" data-toggle="tooltip" data-placement="bottom" title="Apply now">+</a>
-            <h4>Accepting Applications</h4>
-            <p><span>Applications Due:</span></p>
-            <p><span>Session Starts:</span></p>
+            <h4>Not Yet Accepting Applications</h4>
+            <p><span>Applications Due:</span> Sunday, August 28th</p>
+            <p><span>Session Starts:</span> Sunday, September 25th</p>
           </div>
         </div>
         <div class="club row">
