--- a/clubs.html
+++ b/clubs.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width" />
-		<title>Omaha Girls Who Code</title>
+		<title>Clubs | Omaha Girls Who Code</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -106,7 +106,43 @@
       </script>
       <br>
       <div class="clubs-list">
-        <div class="club row">
+        <!-- Modal -->
+        <div id="abrahamsModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+          <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Girls Who Code Application Form for Abrahams Branch</h4>
+              </div>
+              <div class="modal-body">
+                <div id="wufoo-m19kz7540f4e3cu">
+                  Fill out my <a href="https://interfaceschool.wufoo.com/forms/m19kz7540f4e3cu/">online form</a>.
+                </div>
+                <script type="text/javascript">
+                  var mobbd7d0s4mjkm;(function(d, t) {
+                  var s = d.createElement(t), options = {
+                  'userName':'interfaceschool',
+                  'formHash':'m19kz7540f4e3cu',
+                  'autoResize':true,
+                  'height':'832',
+                  'async':true,
+                  'host':'wufoo.com',
+                  'header':'show',
+                  'ssl':true};
+                  s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+                  s.onload = s.onreadystatechange = function() {
+                  var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+                  try { m19kz7540f4e3cu = new WufooForm();m19kz7540f4e3cu.initialize(options);m19kz7540f4e3cu.display(); } catch (e) {}};
+                  var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+                  })(document, 'script');
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="club row">
           <div class="col-xs-12">
             <h2 class="club-heading">Omaha Public Library</h2>
             <h3 class="sub-club">Abrahams Branch</h3>
@@ -122,10 +158,10 @@
           <div class="col-xs-12 col-sm-4">
             <h4>Saturdays, 9am-1pm</h4>
             <p>6th-12th grade</p>
-            <p><span>Instructors:</span> Eris Koleszar, Wendy Holley</p>
+            <p><span>Instructors:</span> Eris Koleszar, Wendy Holley, Shannon Jackson</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <a type="button" class="btn btn-apply" data-toggle="tooltip" data-placement="bottom" title="Apply now">+</a>
+            <a type="button" class="btn btn-apply" data-toggle="modal" data-target="#abrahamsModal" data-tooltip="tooltip" data-placement="bottom" title="Apply Now">+</a>
             <h4>Accepting Applications</h4>
             <p><span>Applications Due:</span> Saturday, August 27</p>
             <p><span>Session Starts:</span> Saturday, September 17</p>
@@ -212,7 +248,7 @@
     </div>
     <script>
     $(function () {
-      $('[data-toggle="tooltip"]').tooltip()
+      $('[data-tooltip="tooltip"]').tooltip()
     })
     </script>
 		<!-- FOOTER -->
