Corrects WuFoo form

--- a/clubs.html
+++ b/clubs.html
@@ -117,14 +117,15 @@
                 <h4 class="modal-title">Girls Who Code Application Form for Abrahams Branch</h4>
               </div>
               <div class="modal-body">
-                <div id="wufoo-m19kz7540f4e3cu">
-                  Fill out my <a href="https://interfaceschool.wufoo.com/forms/m19kz7540f4e3cu/">online form</a>.
+                <div id="wufoo-girls-who-code-application-abrahams-branch">
+                  Fill out my <a href="https://interfaceschool.wufoo.com/forms/girls-who-code-application-abrahams-branch/">online form</a>.
                 </div>
                 <script type="text/javascript">
-                  var mobbd7d0s4mjkm;(function(d, t) {
+                  (function(d, t) {
+                  var formID='girls-who-code-application-abrahams-branch';
                   var s = d.createElement(t), options = {
                   'userName':'interfaceschool',
-                  'formHash':'m19kz7540f4e3cu',
+                  'formHash':formID,
                   'autoResize':true,
                   'height':'832',
                   'async':true,
@@ -134,7 +135,7 @@
                   s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
                   s.onload = s.onreadystatechange = function() {
                   var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-                  try { m19kz7540f4e3cu = new WufooForm();m19kz7540f4e3cu.initialize(options);m19kz7540f4e3cu.display(); } catch (e) {}};
+                  try { formID = new WufooForm();formID.initialize(options);formID.display(); } catch (e) {}};
                   var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
                   })(document, 'script');
                 </script>
