--- a/clubs.html
+++ b/clubs.html
@@ -159,7 +159,7 @@
           <div class="col-xs-12 col-sm-4">
             <h4>Saturdays, 9am-1pm</h4>
             <p>6th-12th grade</p>
-            <p><span>Instructors:</span> Eris Koleszar, Wendy Holley, Shannon Jackson</p>
+            <p><span>Instructors:</span> Eris Koleszar, Bianca Zongrone, Wendy Holley, Shannon Jackson</p>
           </div>
           <div class="col-xs-12 col-sm-4">
             <a type="button" class="btn btn-apply" data-toggle="modal" data-target="#abrahamsModal" data-tooltip="tooltip" data-placement="bottom" title="Apply Now">+</a>
