--- a/clubs.html
+++ b/clubs.html
@@ -134,7 +134,7 @@
                   s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
                   s.onload = s.onreadystatechange = function() {
                   var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-                  try { formID = new WufooForm();formID.initialize(options);formID.display(); } catch (e) {}};
+                  try { modalForm = new WufooForm(); modalForm.initialize(options); modalForm.display(); } catch (e) {}};
                   var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
                   })(document, 'script');
                 </script>
@@ -163,7 +163,7 @@
           <div class="col-xs-12 col-sm-4">
             <a type="button" class="btn btn-apply" data-toggle="modal" data-target="#abrahamsModal" data-tooltip="tooltip" data-placement="bottom" title="Apply Now">+</a>
             <h4>Accepting Applications</h4>
-            <p><span>Applications Due:</span> Saturday, August 27</p>
+            <p><span>Applications Due:</span> Saturday, August 20</p>
             <p><span>Session Starts:</span> Saturday, September 17</p>
           </div>
         </div>
@@ -188,8 +188,8 @@
           </div>
           <div class="col-xs-12 col-sm-4">
             <h4>Not Yet Accepting Applications</h4>
-            <p><span>Applications Due:</span> Sunday, August 28th</p>
-            <p><span>Session Starts:</span> Sunday, September 25th</p>
+            <p><span>Applications Due:</span> Sunday, August 28</p>
+            <p><span>Session Starts:</span> Sunday, September 25</p>
           </div>
         </div>
         <div class="club row">
