update AIM sponsor details

--- a/sponsors.html
+++ b/sponsors.html
@@ -147,9 +147,9 @@
         
         <div class="col-md-6">
           <a href="http://aimforbrilliance.org" target="_blank"><img src="img/sponsors/aim-logo.jpg" alt="AIM"></a>
-          <h2>AIM Exchange</h2>
-          <p>AIM is an innovative not-for-profit community organization that grows, connects and inspires the tech talent ecosystem. AIM 
-          provided space and sponsorship for the final Omaha Girls Who Code - Milton R. Abrahams Omaha Library Branch Club project demo event.</p>
+          <h2>AIM</h2>
+          <p>AIM is an innovative not-for-profit community organization that grows, connects and inspires the community through technology. AIM Brain Exchange is the sponsored location for Completely Kids GWC club. AIM 
+          provided space and sponsorship for the 2016 final project demo event for the Omaha Girls Who Code - Milton R. Abrahams Omaha Library Branch Club.</p>
           <p><a class="btn btn-default" href="http://aimforbrilliance.org/" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
       </div>
