update <p> to <br/> in Wendy's section for 'more' feat.

--- a/volunteers.html
+++ b/volunteers.html
@@ -181,10 +181,10 @@
               <span class="badges badge-organizer badge-instructor"></span>
               <label class="ellipsis" for="clamp-toggle-wendy">
                 For a long time, I saw my best skill as understanding people's needs and making their lives easier.  I turned to code as a solution to their problems, but I didn't think of myself as a coder because I didn't think I looked like a coder.  But coders can and do look like me.  
-		<p>
-I became involved with Girls Who Code because I thought it was important to help the next generation of girls feel like they belong to this community.   Code is important because we will all interact and communicate with each other through code being built today.  Knowing code, getting to build that future, is a privilege, and those who have that knowledge will have an outsize impact on our culture.</p>  
-		<p>
-For that reason, it's important that the tech industry starts to reflect our diverse world.  Movements like Girls Who Code are a first step.  I'm proud and humbled to be a part of what's happening here in Omaha, and across the world.</p>
+		<br/><br/>
+		I became involved with Girls Who Code because I thought it was important to help the next generation of girls feel like they belong to this community.   Code is important because we will all interact and communicate with each other through code being built today.  Knowing code, getting to build that future, is a privilege, and those who have that knowledge will have an outsize impact on our culture.
+		<br/><br/>
+		For that reason, it's important that the tech industry starts to reflect our diverse world.  Movements like Girls Who Code are a first step.  I'm proud and humbled to be a part of what's happening here in Omaha, and across the world.
               </label>
             </p>
           </div>
