Updates email address from gmail to hello@omahagirlswhocode

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 		        </a>
 		      </div>
 		      <div class="col-xs-4">
-		        <a href="mailto:omahagirlswhocode@gmail.com">
+		        <a href="mailto:hello@omahagirlswhocode.com">
 		        	<i class="fa fa fa-envelope"></i>
-		        	<span class="social-link-text">omahagirlswhocode@gmail.com</span>
+		        	<span class="social-link-text">hello@omahagirlswhocode.com</span>
 		        </a>
 		      </div>
 	      </div>
