Updates projects link to permanent url

--- a/clubs.html
+++ b/clubs.html
@@ -227,7 +227,7 @@
           <img class="project-club-logo" src="img/clubs/library.jpeg">        
           <h3>LGBTQIA Giphy Club</h3>          
           <h4 class="sub-club">Middle School Abrahams Branch - Spring 2016</h4>
-          <a href="http://omahagirlswhocode.github.io/giphy-club" target="_blank">
+          <a href="http://omahagirlswhocode.com/giphy-club" target="_blank">
             <div class="project-img" style="background-image:url('img/clubs/projects/giphy-club.png')">
             </div>
           </a>
@@ -237,7 +237,7 @@
           <img class="project-club-logo" src="img/clubs/library.jpeg">
           <h3>Tech Around O</h3>
           <h4 class="sub-club">High School Abrahams Branch - Spring 2016</h4>
-          <a href="http://omahagirlswhocode.github.io/TechAroundO" target="_blank">
+          <a href="http://omahagirlswhocode.com/TechAroundO" target="_blank">
             <div class="project-img" style="background-image:url('img/clubs/projects/tech-around-o.png')">
             </div>
           </a>
