updates lana's pic

--- a/volunteers.html
+++ b/volunteers.html
@@ -61,10 +61,12 @@
     </div>
 
 		<div class="container team">
-
-		  <div class="row">
+      <div class="row">
         <h1>Volunteers -- you made this happen!</h1>
         <hr>
+      </div>
+		  <div class="row">
+
         <div class="col-sm-6 col-lg-3">
           <div class="text-center">
             <img class="img-rounded bio-pic" src="img/volunteers/lanay.jpg">
@@ -91,13 +93,15 @@
             <p class="bio ellipsis-container clamped">
               <span class="badges badge-organizer"></span>
               <label class="ellipsis" for="clamp-toggle-shonna">
-                I love spending my time on projects where everyone benefits and Omaha Girls Who Code represents an excellent example of getting together for good. I am proud to be a part of group which includes individuals from different backgrounds, with different experiences with one thing in common - we are all on a mission to increase the numbers of women in tech. Omaha Girls Who Code has provided opportunities for us to share our strengths as well as grow professionally and personally. I look forward to continuing to support this initiative by sharing my contacts, interest in social media and gift of fundraising for causes I am passionate about. 
+                I love spending my time on projects where everyone benefits and Omaha Girls Who Code represents an excellent example of getting together for good. I am proud to be a part of group which includes individuals from different backgrounds, with different experiences with one thing in common - we are all on a mission to increase the numbers of women in tech. Omaha Girls Who Code has provided opportunities for us to share our strengths as well as grow professionally and personally. I look forward to continuing to support this initiative by sharing my contacts, interest in social media and gift of fundraising for causes I am passionate about.
+                Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
               </label>
             </p>
           </div>
         </div>
 
-        <div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping --><!-- responsive clearfix for 2 column wrapping -->
+        <div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping -->
 
         <div class="col-sm-6 col-lg-3">
           <div class="text-center">
@@ -180,7 +184,7 @@
             <p class="bio ellipsis-container clamped">
               <span class="badges badge-organizer badge-instructor"></span>
               <label class="ellipsis" for="clamp-toggle-wendy">
-                For a long time, I saw my best skill as understanding people's needs and making their lives easier.  I turned to code as a solution to their problems, but I didn't think of myself as a coder because I didn't think I looked like a coder.  But coders can and do look like me.  
+                For a long time, I saw my best skill as understanding people's needs and making their lives easier.  I turned to code as a solution to their problems, but I didn't think of myself as a coder because I didn't think I looked like a coder.  But coders can and do look like me.
 		<br/><br/>
 		I became involved with Girls Who Code because I thought it was important to help the next generation of girls feel like they belong to this community.   Code is important because we will all interact and communicate with each other through code being built today.  Knowing code, getting to build that future, is a privilege, and those who have that knowledge will have an outsize impact on our culture.
 		<br/><br/>
