Changes giphy-club to Local Rainbows
The link to the local rainbows club won't work yet but we will change the file structure of our hosting site so that it will.

--- a/clubs.html
+++ b/clubs.html
@@ -225,13 +225,13 @@
         </div>
         <div class="project col-xs-12 col-md-6">
           <img class="project-club-logo" src="img/clubs/library.jpeg">        
-          <h3>LGBTQIA Giphy Club</h3>          
+          <h3>Local Rainbows</h3>          
           <h4 class="sub-club">Middle School Abrahams Branch - Spring 2016</h4>
-          <a href="http://omahagirlswhocode.com/giphy-club" target="_blank">
+          <a href="http://omahagirlswhocode.com/LocalRainbows" target="_blank">
             <div class="project-img" style="background-image:url('img/clubs/projects/giphy-club.png')">
             </div>
           </a>
-          <p>Giphy Club is the final project of the middle school group raising awareness about an issue they see in their local community. Our girls generated ideas and chose from the resulting list the struggles facing LGBTQIA+ folx in the Omaha metro area.</p>
+          <p>Local Rainbows wants to show people in the LGBTQIA community that they aren’t alone and that most coming out stories of the folks of the acronym have a “happy ending” to say. We also want to inform everybody the meaning of the acronym, and give a brief explanation on what the letter means, not just the word. We made this website because we want to give the LGBTQIA community a larger voice in the world.</p>
         </div>
         <div class="project col-xs-12 col-md-6">
           <img class="project-club-logo" src="img/clubs/library.jpeg">
