Replaces non-html apostraphes and primes with single and double quotes

--- a/clubs.html
+++ b/clubs.html
@@ -231,7 +231,7 @@
             <div class="project-img" style="background-image:url('img/clubs/projects/giphy-club.png')">
             </div>
           </a>
-          <p>Local Rainbows wants to show people in the LGBTQIA community that they aren’t alone and that most coming out stories of the folks of the acronym have a “happy ending” to say. We also want to inform everybody the meaning of the acronym, and give a brief explanation on what the letter means, not just the word. We made this website because we want to give the LGBTQIA community a larger voice in the world.</p>
+          <p>Local Rainbows wants to show people in the LGBTQIA community that they aren't alone and that most coming out stories of the folks of the acronym have a "happy ending" to say. We also want to inform everybody the meaning of the acronym, and give a brief explanation on what the letter means, not just the word. We made this website because we want to give the LGBTQIA community a larger voice in the world.</p>
         </div>
         <div class="project col-xs-12 col-md-6">
           <img class="project-club-logo" src="img/clubs/library.jpeg">
