Makes address and logo changes to clubs page, per AIM

--- a/clubs.html
+++ b/clubs.html
@@ -76,9 +76,9 @@
           lng:  -96.0539399, 
         },
         {
-          club: 'AIM 1905 Harney St, Omaha, NE 68102',
-          lat:   41.2647173,
-          lng:  -95.9457751, 
+          club: 'AIM Brain Exchange 1902 Howard St, Omaha, NE 68102',
+          lat:   41.2558105,
+          lng:  -95.9434867, 
         },
         {
           club: 'Do Space 72nd & Dodge, Omaha, NE 68114',
@@ -194,14 +194,14 @@
         </div>
         <div class="club row">
           <div class="col-xs-12">
-            <h2 class="club-heading">AIM</h2>
+            <h2 class="club-heading">AIM Brain Exchange</h2>
             <h3 class="sub-club">Completely Kids</h3>
           </div>
           <div class="col-xs-12 col-sm-4">
-
+            <img class="club-logo" src="img/clubs/aim-brainexchange-logo.png" style="background-color:#59B771;">
             <img class="club-logo" src="img/clubs/completely-kids-logo.jpg">
             <address>
-              1905 Harney St<br>
+              1902 Howard St<br>
               Omaha, NE 68102
             </address>
           </div>
