Updates DoSpace page with link to the application

--- a/clubs.html
+++ b/clubs.html
@@ -142,7 +142,7 @@
             </div>
           </div>
         </div>
-          <div class="club row">
+        <div class="club row">
           <div class="col-xs-12">
             <h2 class="club-heading">Omaha Public Library</h2>
             <h3 class="sub-club">Abrahams Branch</h3>
@@ -167,7 +167,6 @@
             <p><span>Session Starts:</span> Saturday, September 17</p>
           </div>
         </div>
-        
         <div class="club row">
           <div class="col-xs-12">
             <h2 class="club-heading">Do Space</h2>
@@ -187,7 +186,8 @@
             <p><span>Instructors:</span> Alexandra Millatmal</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Not Yet Accepting Applications</h4>
+            <a href="http://www.dospace.org/events/girls-who-code" target="_blank" type="button" class="btn btn-apply" data-tooltip="tooltip" data-placement="bottom" title="Apply Now"><i class="fa fa-mail-forward"></i></a>
+            <h4>Accepting Applications</h4>
             <p><span>Applications Due:</span> Sunday, August 28</p>
             <p><span>Session Starts:</span> Sunday, September 25</p>
           </div>
