Adds apply now button and url to Do Space club entry

--- a/clubs.html
+++ b/clubs.html
@@ -187,7 +187,8 @@
             <p><span>Instructors:</span> Alexandra Millatmal</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Not Yet Accepting Applications</h4>
+          	<a type="button" class="btn btn-apply" href="http://www.dospace.org/events/girls-who-code" target="_blank" data-tooltip="tooltip" data-placement="bottom" title="Apply Now">+</a>
+            <h4>Now Accepting Applications</h4>
             <p><span>Applications Due:</span> Sunday, August 28</p>
             <p><span>Session Starts:</span> Sunday, September 25</p>
           </div>
