Doh.  The extension is png, not jpg

--- a/resources.html
+++ b/resources.html
@@ -98,7 +98,7 @@
           <p><a class="btn btn-default" href="http://www.dospace.org/" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
         <div class="col-sm-4 resource">
-          <img class="img-resource" src="img/clubs/aim-brainexchange-logo.jpg" alt="AIM Brain Exchange">
+          <img class="img-resource" src="img/clubs/aim-brainexchange-logo.png" alt="AIM Brain Exchange">
           <h3>Brain Exchange</h3>
           <p>AIM Brain Exchange is open to youth ages 7-17. With real life scenario-based learning and teams based on skill level and not age</p>
           <p><a class="btn btn-default" href="http://careerlink.com/brainexchange/" target="_blank" role="button">Visit Website &raquo;</a></p>
