--- a/volunteers.html
+++ b/volunteers.html
@@ -140,7 +140,7 @@
       <div class="row">
         <div class="col-sm-6 col-lg-3">
           <div class="text-center">
-            <img class="img-rounded bio-pic" src="img/volunteers/ErisHeadshot.png">
+            <img class="img-rounded bio-pic" src="img/volunteers/ErisHeadshot.jpg">
             <h3>Eris Koleszar</h3>
           </div>
           <div class="bio-container">
