Closes Abrahams application

--- a/clubs.html
+++ b/clubs.html
@@ -159,9 +159,7 @@
             <p><span>Instructors:</span> Eris Koleszar, Bianca Zongrone, Wendy Holley, Shannon Jackson</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Accepting Applications</h4>
-            <a type="button" class="btn btn-default" data-toggle="modal" data-target="#appModal" data-tooltip="tooltip" data-placement="bottom" title="Apply Now">Apply Now</a>
-            <p><span>Applications Due:</span> Saturday, August 27</p>
+            <h4>Not Accepting Applications</h4>
             <p><span>Session Starts:</span> Saturday, September 17</p>
           </div>
         </div>
