Adds Instructor icons to Bianca and Alexandra

--- a/volunteers.html
+++ b/volunteers.html
@@ -202,7 +202,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-alexandra"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-ta"></span>
+              <span class="badges badge-ta badge-instructor"></span>
               <label class="ellipsis" for="clamp-toggle-alexandra">
                 I began coding because I wanted to engineer solutions to real-world problems. After working in journalism (I produced an international talk show and edited the first English-language news site in Tunisia), I decided to transition to a career in development by enrolling in Omaha Code School. Now, I'm an instructor there! I use code as a tool to make processes more efficient and approach problems and their solutions in a relevant, accessible way. I am passionate about Girls Who Code because - given the challenges we face - who else is better-equipped to contribute fresh ideas and think up the next best solutions than girls and women?
               </label>
@@ -259,7 +259,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-bianca"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-ta"></span>
+              <span class="badges badge-ta badge-instructor"></span>
               <label class="ellipsis" for="clamp-toggle-bianca">
                 I'm a UX Designer at Kiewit (yay! New job!)
                 I've always been surrounded by tech, but was never really encouraged to go into it. I went to grad school for human resources and industrial/organizational psychology, but it didn't allow me to be creative and I didn't feel fulfilled. I found Interface and learned front-end web development, which allowed me to move into a UX design position, and here I am!
