--- a/clubs.html
+++ b/clubs.html
@@ -106,40 +106,6 @@
       </script>
       <br>
       <div class="clubs-list">
-        <!-- Modal -->
-        <div id="appModal" class="modal fade" role="dialog">
-          <div class="modal-dialog">
-          <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Omaha Girls Who Code Application Form - All Clubs</h4>
-              </div>
-              <div class="modal-body">
-                <div id="wufoo-m162h8u80qnh6ng">
-				Apply for <a href="https://interfaceschool.wufoo.com/forms/m162h8u80qnh6ng">Omaha Girls Who Code</a>.
-				</div>
-				<script type="text/javascript">var m162h8u80qnh6ng;(function(d, t) {
-				var s = d.createElement(t), options = {
-				'userName':'interfaceschool',
-				'formHash':'m162h8u80qnh6ng',
-				'autoResize':true,
-				'height':'1587',
-				'async':true,
-				'host':'wufoo.com',
-				'header':'show',
-				'ssl':true};
-				s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-				s.onload = s.onreadystatechange = function() {
-				var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-				try { m162h8u80qnh6ng = new WufooForm();m162h8u80qnh6ng.initialize(options);m162h8u80qnh6ng.display(); } catch (e) {}};
-				var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-				})(document, 'script');
-				</script>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="club row">
           <div class="col-xs-12">
             <h2 class="club-heading">Omaha Public Library</h2>
@@ -182,9 +148,7 @@
             <p><span>Instructors:</span> Alexandra Millatmal</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Accepting Applications</h4>
-			      <a type="button" class="btn btn-default" data-toggle="modal" data-target="#appModal" data-tooltip="tooltip" data-placement="bottom" title="Apply Now">Apply Now</a>
-            <p><span>Applications Due:</span> Sunday, August 28</p>
+            <h4>Not Accepting Applications</h4>
             <p><span>Session Starts:</span> Sunday, September 25</p>
           </div>
         </div>
