--- a/volunteers.html
+++ b/volunteers.html
@@ -229,7 +229,7 @@
         </div>
 	<div class="col-sm-6 col-lg-3">
 		<div class="text-center">
-    			  <img class="img-rounded" src="img/volunteers/juliet.jpg" width="140" height="140">
+    			  <img class="img-rounded" src="img/volunteers/julietr.jpg" width="140" height="140">
     			  <h3>Juliet Rosenthal</h3>
           	</div>
           	<div class="bio-container">
@@ -248,7 +248,7 @@
   	</div><!--/Juliet-->
 	<div class="col-sm-6 col-lg-3">
 		<div class="text-center">
-    			  <img class="img-rounded" src="img/volunteers/luta.jpg" width="140" height="140">
+    			  <img class="img-rounded" src="img/volunteers/lutap.JPG" width="140" height="140">
     			  <h3>Luta Pleiss</h3>
           	</div>
           	<div class="bio-container">
